<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="10dp" >

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/search_head" />


    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/EditSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_input_field"
            android:inputType="text" />

        <Button
            android:id="@+id/btnFinishForm"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/search_btn_search" />
    </LinearLayout>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/textviewoversearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/search_under_input_field" />

    <!-- impedance spinner -->
    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/txt_imdedance"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/search_impedance" />

        <Spinner
            android:id="@+id/spinner_imdedance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/search_impedance_list"
            android:prompt="@string/search_impedance" >
        </Spinner>
    </LinearLayout>
</LinearLayout>